# gatehouse

./: .gitignore  CHANGELOG.md  CLAUDE.md  Containerfile  README.md  gourmand-exceptions.toml  gourmand.toml  pyproject.toml
.gemini/: config.yaml  styleguide.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  container.yml  gatehouse.yml  review.yml  security.yml
.specify/memory/: constitution.md
.specify/specs/001-workflow-secret-exfiltration/: plan.md  spec.md
.specify/specs/002-pr-review-comments/: plan.md  spec.md
examples/: _redteam_sample.py  gatehouse.yml  gourmand.yml  intentional_bugs.py  test_bug.py
src/gatehouse/: __init__.py  agents.py  cli.py  gemini.py  github.py  output.py  review.py
tests/: test_agents.py  test_fork_safety.py  test_github.py  test_output.py  test_review.py
